# maftk

./: Cargo.toml  LICENSE  README.md  validation.md
.github/workflows/: ci.yml
src/: binary.rs  index.rs  io.rs  lib.rs  main.rs  statistics.rs
tests/data/: chr22_chunk.maf
