[package]
name = "biomaf"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bio-seq = { version = "0.13.5", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.2.0"
csv = "1.3.1"
flate2 = "1.0.35"
hgindex = { git = "https://github.com/vsbuffalo/hgindex", version = "0.1.0" }
indicatif = "0.17.9"
lazy_static = "1.5.0"
memmap2 = "0.9.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[lib]
name = "biomaf"
path = "src/lib.rs"

[[bin]]
name = "biomaf"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.14.0"

