[package]
name = "maftk"
version = "0.1.0"
edition = "2021"

[dependencies]
bio-seq = { version = "0.13.5", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.2.0"
csv = "1.3.1"
flate2 = "1.0.35"
glob = "0.3.1"
hgindex = { git = "https://github.com/vsbuffalo/hgindex", version = "0.1.0" }
#hgindex = { path = "../hgindex", version = "0.1.0" }
indicatif = "0.17.9"
lazy_static = "1.5.0"
polars = { version = "0.45.1", features = ["lazy"] }
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zstd = "0.13.2"

[lib]
name = "maftk"
path = "src/lib.rs"

[[bin]]
name = "maftk"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.14.0"

